--- a/CS/OOP/index.html
+++ b/CS/OOP/index.html
@@ -171,7 +171,7 @@
 <ul>
 <li>클래스의 속성과 행위를 하위 클래스에 물려주거나 하위 클래스가 상위 클래스의 속성과 행위를 물려받는 것</li>
 <li>새로운 클래스가 기존의 클래스의 데이터와 연산을 이용할 수 있게 하는 기능</li>
-<li>__일반화 관계 (Generalization)__라고도 하며, 여러 개체들이 지닌 공통된 특성을 부각시켜 하나의 개념이나 법칙으로 성립하는 과정</li>
+<li>*일반화 관계 (Generalization)*라고도 하며, 여러 개체들이 지닌 공통된 특성을 부각시켜 하나의 개념이나 법칙으로 성립하는 과정</li>
 </ul>
 </br>
 <blockquote>
