--- a/CS/CacheMemory/index.html
+++ b/CS/CacheMemory/index.html
@@ -135,8 +135,10 @@
 <p><strong>캐시의 지역성(Cache Locality)</strong> 이란? </br></p>
 </br>
 <blockquote>
-<p>데이터에 대한 접근이 시간적 혹은 공간적으로 가깝게 발생하는 것을 말한다. </br>
-캐시의 **적중률(Hit rate)**을 극대화하여 캐시가 효율적으로 동작하기 위해 사용되는 성질이다. </br></p>
+<p>데이터에 대한 접근이 시간적 혹은 공간적으로 가깝게 발생하는 것을 말한다. </br></p>
+</blockquote>
+<blockquote>
+<p>캐시의 **적중률(Hit rate)**을 극대화하여 캐시가 효율적으로 동작하기 위해 사용되는 성질이다. </br></p>
 </blockquote>
 </br>
 <h3 id="시간-지역성-temporal-locality" style="position:relative;"><a href="#%EC%8B%9C%EA%B0%84-%EC%A7%80%EC%97%AD%EC%84%B1-temporal-locality" aria-label="시간 지역성 temporal locality permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>시간 지역성 (Temporal Locality)</h3>
