--- a/iOS/info/index.html
+++ b/iOS/info/index.html
@@ -165,10 +165,12 @@
     </span></p>
 </br>
 <ol start="2">
-<li>Key에 **‘App Transport Security’**를 추가하고 </br></li>
+<li></li>
 </ol>
-<p>하위에 **‘Allow Arbitrary Loads’**를 추가한 다음, </br>
-Value를 **‘Yes’**로 설정</p>
+</br>
+<p>Key에 **‘App Transport Security’**를 추가하고 </br></p>
+<p>하위에 **‘Allow Arbitrary Loads’**를 추가한 다음, </br></p>
+<p>Value를 **‘Yes’**로 설정</p>
 </br>
 </br>
 <p><a href="./4.png">사진</a></p>
@@ -181,13 +183,14 @@ Value를 **‘Yes’**로 설정</p>
 <p><a href="./5.png">사진</a></p>
 </br>
 <ol start="3">
-<li>Key에 **‘Application Scene Manifest’**르 추가하고 </br></li>
+<li>Key에 **‘Application Scene Manifest’**르 추가하고</li>
 </ol>
+</br>
 <p>하위에 **‘Scene Configuration’**을 추가</p>
 </br>
 </br>
-<p><a href="./result.png">사진</a>
-</br></p>
+<p><a href="./result.png">사진</a></p>
+</br>
 <blockquote>
 <p>다음과 같이 해당 에러가 사라진 것을 볼 수 있다.</p>
 </blockquote>
@@ -195,8 +198,9 @@ Value를 **‘Yes’**로 설정</p>
 </br>
 <h2 id="-infoplist-파일" style="position:relative;"><a href="#-infoplist-%ED%8C%8C%EC%9D%BC" aria-label=" infoplist 파일 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>🧠 Info.plist 파일</h2>
 <blockquote>
-<p>Info.plist = Information Property List Files </br></p>
+<p>Info.plist = Information Property List Files</p>
 </blockquote>
+</br>
 </br>
 <ul>
 <li>Info.plist 파일은 <strong>실행 패키지에 관한 필수 설정 정보</strong>가 포함된 구조화된 텍스트 파일</li>
