--- a/swift/binding/index.html
+++ b/swift/binding/index.html
@@ -187,12 +187,9 @@
 </br>
 <h2 id="-binding" style="position:relative;"><a href="#-binding" aria-label=" binding permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>💡 @Binding</h2>
 <blockquote>
-<p>A property wrapper type that can read and write a value</p>
-</blockquote>
-<p>owned by a source of truth </br></p>
-<blockquote>
+<p>A property wrapper type that can read and write a value owned by a source of truth </br>
 </br>
-@State로 선언된 속성을 다른 뷰에서 사용하려 할 때 @Bindging 사용 </br>
+@State로 선언된 속성을 다른 뷰에서 사용하려 할 때 @Bindging 사용 </br></p>
 </blockquote>
 </br>
 <p>사용법 </br></p>
